# stensor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
examples/: gemm_bench.rs
shaders/gla/geometry/: quat.slang  sim2.slang  sim3.slang  svd2.slang  svd3.slang
shaders/gla/linalg/: contiguous.slang  gemv.slang  op_assign.slang  reduce.slang  shape.slang
shaders/gla/utils/: limits.slang  trig.slang
shaders/stensor/geometry/: rot2.slang  sim2.slang  sim3.slang  svd2.slang  svd3.slang
shaders/stensor/linalg/: contiguous.slang  gemm.slang  inv.slang  op_assign.slang  repeat.slang
shaders/stensor/utils/: mat.slang
src/: lib.rs  shapes.rs  tensor.rs
src/autogen/wgsl/linalg/: gemm.wgsl  gemv.wgsl  op_assign.wgsl  reduce.wgsl
src/geometry/: cholesky.rs  eig2.rs  eig2.wgsl  eig3.rs  eig3.wgsl  eig4.rs  eig4.wgsl  inv.rs  inv.wgsl  lu.rs  mod.rs  qr2.rs  qr2.wgsl  qr3.rs  qr3.wgsl  qr4.rs  qr4.wgsl  sim2.rs  sim3.rs  svd2.rs  svd3.rs
src/linalg/: contiguous.rs  gemm.rs  gemv.rs  mod.rs  op_assign.rs  reduce.rs  repeat.rs
